--- a/Code/App/01_BERT_Large_Methods_DevanshModi.ipynb
+++ b/Code/App/01_BERT_Large_Methods_DevanshModi.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -2413,16 +2412,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/VineetKiragi/CMPE-257/blob/main/01_Methods_DevanshModi.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "source": [
         "!nvidia-smi"
@@ -3054,6 +3043,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### epochs = 1"
+      ],
+      "metadata": {
+        "id": "lMvAXKqKOnB1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "reader = FARMReader(model_name_or_path=\"bert-large-uncased-whole-word-masking-finetuned-squad\", use_gpu=True)\n",
@@ -3210,6 +3208,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### epochs = 10"
+      ],
+      "metadata": {
+        "id": "Wh0TqN5lOp7X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reader = FARMReader(model_name_or_path=\"bert-large-uncased-whole-word-masking-finetuned-squad\", use_gpu=True)\n",
+        "data_dir = \"/content/drive/MyDrive\"\n",
+        "reader.train(data_dir=data_dir, train_filename=\"merged_file.json\", use_gpu=True, n_epochs=1, save_dir=\"devansh_model\")"
+      ],
+      "metadata": {
+        "id": "XewAEjmNOyZP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Run again with training and validation split"
       ],
       "metadata": {
@@ -3327,73 +3347,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6_mAnIPKaXyw"
-      },
-      "source": [
-        "For something like text classification, you definitely want to fine-tune BERT on your own dataset. For question answering, however, it seems like you may be able to get decent results using a model that's already been fine-tuned on the SQuAD benchmark. In this analysis, we'll do exactly that, and see that it performs well on text that wasn't in the SQuAD dataset.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "X2bUvKUffHNY"
-      },
-      "source": [
-        "# Part 1: How BERT is applied to Question Answering"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Su7fixBdiUex"
-      },
-      "source": [
-        "## The SQuAD v1.1 Benchmark"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bT5ESKDxfnLf"
-      },
-      "source": [
-        "When someone mentions \"Question Answering\" as an application of BERT, what they are really referring to is applying BERT to the Stanford Question Answering Dataset (SQuAD).\n",
-        "\n",
-        "The task posed by the SQuAD benchmark is a little different than you might think. Given a question, and *a passage of text containing the answer*, BERT needs to highlight the \"span\" of text corresponding to the correct answer. \n",
-        "\n",
-        "The SQuAD homepage has a fantastic tool for exploring the questions and reference text for this dataset, and even shows the predictions made by top-performing models.\n",
-        "\n",
-        "For example, here are some [interesting examples](https://rajpurkar.github.io/SQuAD-explorer/explore/1.1/dev/Super_Bowl_50.html?model=r-net+%20(ensemble)%20(Microsoft%20Research%20Asia)&version=1.1) on the topic of Super Bowl 50.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_xN5f1bxf6K_"
-      },
-      "source": [
-        "## BERT Input Format"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Ctum5SK6f9uP"
       },
       "source": [
-        "To feed a QA task into BERT, we pack both the question and the reference text into the input.\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9-SS0PucOQdt"
-      },
-      "source": [
-        "\n",
-        "The two pieces of text are separated by the special `[SEP]` token. \n",
-        "\n",
-        "BERT also uses \"Segment Embeddings\" to differentiate the question from the reference text. These are simply two embeddings (for segments \"A\" and \"B\") that BERT learned, and which it adds to the token embeddings before feeding them into the input layer. "
+        "We are able to get a 93% accuracy for our context."
       ]
     },
     {
@@ -3424,36 +3381,6 @@
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "1WThOUtpYvG-"
-      },
-      "source": [
-        "## 2. Load Fine-Tuned BERT-large"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "AaweLnNXGhTY"
-      },
-      "source": [
-        "For Question Answering we use the `BertForQuestionAnswering` class from the `transformers` library.\n",
-        "\n",
-        "This class supports fine-tuning, but for this example we will keep things simpler and load a BERT model that has already been fine-tuned for the SQuAD benchmark.\n",
-        "\n",
-        "The `transformers` library has a large collection of pre-trained models which you can reference by name and load easily. The full list is in their documentation [here](https://huggingface.co/transformers/pretrained_models.html).\n",
-        "\n",
-        "For Question Answering, they have a version of BERT-large that has already been fine-tuned for the SQuAD benchmark. \n",
-        "\n",
-        "BERT-large is really big... it has 24-layers and an embedding size of 1,024, for a total of 340M parameters! Altogether it is 1.34GB, so expect it to take a couple minutes to download to your Colab instance. \n",
-        "\n",
-        "(Note that this download is not using your own network bandwidth--it's between the Google instance and wherever the model is stored on the web).\n",
-        "\n",
-        "Note: I believe this model was trained on version 1 of SQuAD, since it's not outputting whether the question is \"impossible\" to answer from the text (which is part of the task in v2 of SQuAD).\n"
-      ]
     },
     {
       "cell_type": "code",
@@ -3576,8 +3503,7 @@
         "id": "kWzZP4EN-Zxg"
       },
       "source": [
-        "question = \"How many parameters does BERT-large have?\"\n",
-        "answer_text = \"BERT-large is really big... it has 24-layers and an embedding size of 1,024, for a total of 340M parameters! Altogether it is 1.34GB, so expect it to take a couple minutes to download to your Colab instance.\""
+        "question = \"What is famous in San Francisco?\""
       ],
       "execution_count": null,
       "outputs": []
