--- a/Code/App/01_Squad_QA_Analysis_DevanshModi.ipynb
+++ b/Code/App/01_Squad_QA_Analysis_DevanshModi.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "16712adb",
       "metadata": {
         "id": "16712adb"
@@ -11,7 +11,9 @@
       "source": [
         "import requests\n",
         "import json\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.neighbors import NearestNeighbors"
       ]
     },
     {
@@ -26,11 +28,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "c5b62890",
       "metadata": {
         "id": "c5b62890",
-        "outputId": "05238fec-3d21-4841-c483-7993a2b7eaa7",
+        "outputId": "7569a4a1-ecd6-4663-ba59-48b273c99408",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -40,16 +42,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-11-19 17:13:33--  https://raw.githubusercontent.com/rajpurkar/SQuAD-explorer/master/dataset/train-v1.1.json\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "--2022-12-07 01:53:15--  https://raw.githubusercontent.com/rajpurkar/SQuAD-explorer/master/dataset/train-v1.1.json\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.109.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 30288272 (29M) [text/plain]\n",
             "Saving to: ‘train-v1.1.json’\n",
             "\n",
-            "train-v1.1.json     100%[===================>]  28.88M  --.-KB/s    in 0.1s    \n",
+            "train-v1.1.json     100%[===================>]  28.88M  79.6MB/s    in 0.4s    \n",
             "\n",
-            "2022-11-19 17:13:35 (300 MB/s) - ‘train-v1.1.json’ saved [30288272/30288272]\n",
+            "2022-12-07 01:53:19 (79.6 MB/s) - ‘train-v1.1.json’ saved [30288272/30288272]\n",
             "\n"
           ]
         }
@@ -63,11 +65,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "770f496c",
       "metadata": {
         "id": "770f496c",
-        "outputId": "dfd10902-3582-4fca-b4ef-d57af3b551e9",
+        "outputId": "83d0877f-e031-441b-8be2-9feb161fbaad",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -81,7 +83,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ],
       "source": [
@@ -148,13 +150,13 @@
       ],
       "metadata": {
         "id": "cn1J9jGWUZ5U",
-        "outputId": "7e0ce1f5-7d4b-4d91-d9f8-171ed7a79702",
+        "outputId": "084ad51a-8d1b-4108-8b18-6b0d12dec5c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "cn1J9jGWUZ5U",
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,13 +178,13 @@
       ],
       "metadata": {
         "id": "2gKwVb9AURYz",
-        "outputId": "9b59c701-4590-41ee-968e-17494aada933",
+        "outputId": "0db8331a-5768-44ca-adcb-d40d628e18a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "2gKwVb9AURYz",
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,12 +205,12 @@
         "id": "jnhlc13ha6ub"
       },
       "id": "jnhlc13ha6ub",
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 8,
       "id": "56149062",
       "metadata": {
         "id": "56149062"
@@ -241,14 +243,14 @@
       ],
       "metadata": {
         "id": "MyuTVz7YbzCg",
-        "outputId": "13e57219-ca3c-4c7a-8b72-ae4d2eb9856f",
+        "outputId": "1b503bd3-7925-4bfd-c4a3-3e5d302f9a01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
       "id": "MyuTVz7YbzCg",
-      "execution_count": 47,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,7 +279,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f2bc7057-288a-42b1-ba46-7d47ae45bfcb\">\n",
+              "  <div id=\"df-68e29e71-3dc0-4962-b22f-ecba79f6a51e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -348,7 +350,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f2bc7057-288a-42b1-ba46-7d47ae45bfcb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-68e29e71-3dc0-4962-b22f-ecba79f6a51e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -399,12 +401,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f2bc7057-288a-42b1-ba46-7d47ae45bfcb button.colab-df-convert');\n",
+              "          document.querySelector('#df-68e29e71-3dc0-4962-b22f-ecba79f6a51e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f2bc7057-288a-42b1-ba46-7d47ae45bfcb');\n",
+              "          const element = document.querySelector('#df-68e29e71-3dc0-4962-b22f-ecba79f6a51e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -427,7 +429,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 9
         }
       ]
     },
@@ -448,14 +450,14 @@
       ],
       "metadata": {
         "id": "rBWnJ8qjgbRR",
-        "outputId": "90cce086-5b27-45f9-ac2c-190747fb03be",
+        "outputId": "c263fcc3-017e-4100-e924-0ae4cc5f5350",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
         }
       },
       "id": "rBWnJ8qjgbRR",
-      "execution_count": 48,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -478,7 +480,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-91b36c7c-f249-4db5-8dbc-8804b4c97be4\">\n",
+              "  <div id=\"df-8fb01533-9852-4928-9c7c-ee17f886f10b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -550,7 +552,7 @@
               "</table>\n",
               "<p>151 rows × 1 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-91b36c7c-f249-4db5-8dbc-8804b4c97be4')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8fb01533-9852-4928-9c7c-ee17f886f10b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -601,12 +603,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-91b36c7c-f249-4db5-8dbc-8804b4c97be4 button.colab-df-convert');\n",
+              "          document.querySelector('#df-8fb01533-9852-4928-9c7c-ee17f886f10b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-91b36c7c-f249-4db5-8dbc-8804b4c97be4');\n",
+              "          const element = document.querySelector('#df-8fb01533-9852-4928-9c7c-ee17f886f10b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -627,6 +629,137 @@
               "  </div>\n",
               "  "
             ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vectorizer_cnf = {\n",
+        "    'lowercase': True,\n",
+        "    'stop_words': 'english',\n",
+        "    'analyzer': 'word',\n",
+        "    'binary': True,\n",
+        "}\n",
+        "\n",
+        "nn_cnf = {\n",
+        "    'n_neighbors': 4,\n",
+        "    'metric': 'cosine' #'euclidean'\n",
+        "}\n",
+        "\n",
+        "embedding = TfidfVectorizer(**vectorizer_cnf)\n",
+        "nearest_neighbor = NearestNeighbors(**nn_cnf)"
+      ],
+      "metadata": {
+        "id": "jQb4KXy4Xbhx"
+      },
+      "id": "jQb4KXy4Xbhx",
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sklearn\n",
+        "sorted(sklearn.neighbors.VALID_METRICS['brute'])"
+      ],
+      "metadata": {
+        "id": "M60oWdioaSyi"
+      },
+      "id": "M60oWdioaSyi",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = embedding.fit_transform(data['context'])\n",
+        "nearest_neighbor.fit(X, data['context_id'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UkMe6_xhXjx_",
+        "outputId": "919fff2e-fd31-46d3-9a01-37b3845494ef"
+      },
+      "id": "UkMe6_xhXjx_",
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "NearestNeighbors(metric='cosine', n_neighbors=4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = 'What are the most popular things in Houston?'\n",
+        "\n",
+        "vector = embedding.transform([text])\n",
+        "vector = embedding.inverse_transform(vector)\n",
+        "\n",
+        "vector"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RdAeQkGOXuWO",
+        "outputId": "ffa9e6ff-8d4e-4898-e38e-89a765579c72"
+      },
+      "id": "RdAeQkGOXuWO",
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[array(['popular', 'houston'], dtype='<U16')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "value = nearest_neighbor.kneighbors(embedding.transform([text]), return_distance=False)\n",
+        "selected = data.iloc[value[0][0]]['context']\n",
+        "selected"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "id": "oAjwXsRvbvNn",
+        "outputId": "8dc854f0-043d-4749-cb02-078dff946240"
+      },
+      "id": "oAjwXsRvbvNn",
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Houston is a large metropolis in Texas, extending to Galveston Bay. It’s closely linked with the Space Center Houston, the coastal visitor center at NASA’s astronaut training and flight control complex. The city’s relatively compact Downtown includes the Theater District, home to the renowned Houston Grand Opera, and the Historic District, with 19th-century architecture and upscale restaurants.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
           "metadata": {},
           "execution_count": 48
